# django-feedback-govuk

./: .gitignore  Makefile  README.md  boot_django.py  pyproject.toml  settings.py  tox.ini
.github/workflows/: test.yml
django-feedback/: urls.py
django-feedback/migrations/: 0001_initial.py  0002_alter_betaservicefeedback_satisfaction.py  0003_alter_betaservicefeedback_options.py  0004_alter_betaservicefeedback_satisfaction.py  0005_betaservicefeedback_submitted_at.py
django_feedback_govuk/: apps.py  forms.py  models.py  notify.py  settings.py  urls.py  views.py
django_feedback_govuk/migrations/: 0001_initial.py  0002_alter_feedback_submitter.py  0003_feedback_activities_feedback_issues_and_more.py  0003_restructure_feedback.py  0004_alter_basefeedback_id.py  0004_alter_feedback_activities_alter_feedback_comment_and_more.py
django_feedback_govuk/templates/django_feedback_govuk/includes/: pagination.html
django_feedback_govuk/templates/django_feedback_govuk/partials/: confirm.html  listing.html  stars.html  submit.html  submitted.html
django_feedback_govuk/templates/django_feedback_govuk/tags/: listing.html  submit.html
django_feedback_govuk/templates/django_feedback_govuk/templates/: confirm.html  listing.html  stars.html  submit.html  submitted.html
django_feedback_govuk/templates/django_feedback_govuk/widgets/star_rating/: radios.html  star_rating.html
django_feedback_govuk/templates/feedback/: confirm.html  listing.html
django_feedback_govuk/templatetags/: feedback_tags.py
django_feedback_govuk/tests/: factories.py  settings.py  test_views.py  urls.py
example_project/: Makefile  README.md  package-lock.json  package.json  pyproject.toml
example_project/custom_feedback/: forms.py  models.py  views.py
example_project/custom_feedback/migrations/: 0001_initial.py
example_project/example/: asgi.py  forms.py  settings.py  urls.py  views.py
example_project/example/templates/: base.html  confirm.html  project_select.html  submit.html
example_project/example/templates/django_feedback_govuk/templates/: confirm.html  listing.html  submit.html  submitted.html
feedback/: notify.py
feedback/migrations/: 0001_initial.py
scripts/: djangoshell.py  load_tests.py  makemigrations.py  migrate.py
