[tool.poetry]
name = "django-feedback-govuk-example-project"
version = "0.1.0"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.13"
django-feedback-govuk = { path = "../", develop = true }
whitenoise = "^6.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
